--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
     - "2.7"
     - "3.3"
+before_install:
+    # Installing Arpeggio as a dependency
+    - git clone git@github.com:igordejanovic/Arpeggio.git
+    - cd Arpeggio && python setup.py install
 install:
     - python setup.py install
 script:
