--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.3"
 before_install:
     # Installing Arpeggio as a dependency
-    - git clone git@github.com:igordejanovic/Arpeggio.git
+    - git clone --depth=50 --branch=master git://github.com/igordejanovic/Arpeggio.git
     - cd Arpeggio && python setup.py install
 install:
     - python setup.py install
