Checking where am i on travis environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python:
     - "3.3"
 before_install:
     # Installing Arpeggio as a dependency
+    - pwd
     - git clone --depth=50 --branch=master git://github.com/igordejanovic/Arpeggio.git
     - cd Arpeggio && python setup.py install
 install:
+    - pwd
     - python setup.py install
 script:
     - py.test tests/functional
