Added docs for textx command/tool.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ pages:
     - Visualization: visualization.md
     - Error handling: error_handling.md
     - Debugging: debugging.md
+    - textx command: textx_command.md
 - Tutorials:
     - Hello World: tutorials/hello_world.md
     - Robot: tutorials/robot.md
