Chaging mkdocs theme.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ site_author: Igor Dejanović
 
 repo_url: https://github.com/igordejanovic/textX
 google_analytics: ['UA-68681917-1', 'igordejanovic.net']
+theme: readthedocs
 
 pages:
 - Home: index.md
