--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ site_author: Igor Dejanović
 
 repo_url: https://github.com/igordejanovic/textX
 google_analytics: ['UA-68681917-1', 'igordejanovic.net']
+theme: readthedocs
 
 pages:
 - Home: index.md
@@ -22,6 +23,7 @@ pages:
     - Entity: tutorials/entity.md
     - State Machine: tutorials/state_machine.md
 - About:
+    - Comparison: about/comparison.md
     - Discuss: about/discuss.md
     - Contributing: about/contributing.md
     - License: about/license.md
