--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ site_author: Igor Dejanović
 repo_url: https://github.com/igordejanovic/textX
 google_analytics: ['UA-68681917-1', 'igordejanovic.net']
 theme: readthedocs
+extra_css: ['style.css']
 
 pages:
 - Home: index.md
