--- a/examples/CustomIDL/cpp_header.template
+++ b/examples/CustomIDL/cpp_header.template
@@ -10,7 +10,7 @@ struct {{struct.name}} {
         {% if "ArrayAttribute" in attribute.__class__.__name__ %}
             // -----------------------------
             // ARRAY {{ attribute.name }}
-            {{ attribute.type.name }} {{ attribute.name }} [ {{ render_formula(attribute.array_size) }} ]
+            {{ attribute.type.name }} {{ attribute.name }} [ {{ attribute.array_size.render_formula() }} ]
         {% endif %}
     {% endfor %}
 
