--- a/examples/CustomIDL/cpp_header.template
+++ b/examples/CustomIDL/cpp_header.template
@@ -15,6 +15,20 @@
 
 class {{struct.name}} {
 public:
+{% if struct.has_adjustable_array_dimensions() %}
+    void init(
+    {% for attribute in struct.get_attributes_which_affects_size() %}
+        const {{ cpptool.fqn(attribute.type) }} &p_{{ attribute.name }} {{ "," if not loop.last }}
+    {% endfor %}
+    ) {
+    {% for attribute in struct.get_attributes_which_affects_size() %}
+        this->{{ attribute.name }} = p_{{ attribute.name }};
+    {% endfor %}
+    {% for attribute in struct.get_arrays_with_adjustable_dimensions() %}
+        {{ attribute.name }}.adjust_size();
+    {% endfor %}
+    }
+{% endif %}
 {% for attribute in struct.attributes %}
     {% if "ScalarAttribute" in attribute.__class__.__name__ %}
         // -----------------------------
@@ -30,7 +44,7 @@ public:
         // array {{ attribute.name }} -- fixed size: {{ attribute.has_fixed_size() }}
         attributes::DynamicArrayAttribute<{{cpptool.fqn(attribute.type)}}, {{struct.name}}, {{attribute.array_sizes|length}}> {{ attribute.name }} = { {
         {% for s in attribute.array_sizes %}
-            [this](){ return {{ s.render_formula(separator="->",postfix=".value()")}}; },
+            [this](){ return {{ s.render_formula(separator="->",postfix=".value()")}}; } {{ "," if not loop.last }}
         {% endfor %}
         } };
     {% endif %}
