--- a/examples/CustomIDL/templates/python.template
+++ b/examples/CustomIDL/templates/python.template
@@ -48,6 +48,6 @@ class {{struct.name}}(BaseStruct):
         self._set_value("{{ attribute.name }}", p_{{ attribute.name }})
     {% endfor %}
     {% for attribute in struct.get_arrays_with_adjustable_dimensions() %}
-        self.{{ attribute.name }}._adjust_size();
+        self.__dict__["{{ attribute.name }}"]._adjust_size();
     {% endfor %}
 {% endif %}
