--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ pages:
     - Grammar: grammar.md
     - Meta-model: metamodel.md
     - Model: model.md
+    - Scoping: scoping.md
+    - Multi meta-model: multimetamodel.md
     - Parser configuration: parser_config.md
     - Visualization: visualization.md
     - Error handling: error_handling.md
