--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,9 @@ install:
     - python setup.py install
 script:
     - py.test tests/functional
+
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
