include flake8 into travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 script:
     - coverage run --source textx -m py.test tests/functional
     - coverage report
+    - flake8 --exclude tests/perf
 
 matrix:
   include:
