--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
     - cd ..
     - pip install Jinja2
     - pip install coverage
+    - pip install flake8
     - git clone --depth=1 --branch=master git://github.com/igordejanovic/Arpeggio.git
     - cd Arpeggio && python setup.py install
     - cd ../textX
