coverage: check for minimal coverage (total coverage)... Maybe this not very helpful... But at least we see if the value drops down too much.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
     - python setup.py install
 script:
     - coverage run --source textx -m py.test tests/functional
-    - coverage report
+    - coverage report --fail-under 80
     - flake8 textx tests --exclude tests/perf,textx/six.py,textx/lang.py
 
 matrix:
