Simplify usage of flake8. Configure using `setup.cfg`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 script:
     - coverage run --source textx -m py.test tests/functional
     - coverage report --fail-under 80
-    - flake8 textx tests --exclude tests/perf,textx/six.py,textx/lang.py
+    - flake8
 
 matrix:
   include:
