--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,10 @@ description-file = README.rst
 [bdist_wheel]
 universal=1
 
+[flake8]
+exclude = .git/*,.eggs/*,.tox/*,
+          textx/six.py,
+          textx/lang.py,
+          tests/perf/*,
+          build/*,
+          .ropeproject/*
