excluded venv from flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,5 @@ exclude = .git/*,.eggs/*,.tox/*,
           textx/lang.py,
           tests/perf/*,
           build/*,
-          .ropeproject/*
+          .ropeproject/*,
+          venv/*
