--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,5 @@ exclude = .git/*,.eggs/*,.tox/*,
           textx/six.py,
           textx/lang.py,
           tests/perf/*,
-          build/*,
+          build/*,venv/*,
           .ropeproject/*
