--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: textX
 site_description: A meta-language for building Domain-Specific Languages (DSLs)
 site_author: Igor Dejanović
 
-repo_url: https://github.com/igordejanovic/textX
+repo_url: https://github.com/textX/textX
 google_analytics: [UA-68681917-1, igordejanovic.net]
 theme: readthedocs
 extra_css: [style.css, css/version-select.css]
@@ -32,8 +32,8 @@ nav:
 - About:
   - Comparison: about/comparison.md
   - Discuss: about/discuss.md
-  - Contributing: https://github.com/igordejanovic/textX/blob/master/CONTRIBUTING.md
-  - License: https://github.com/igordejanovic/textX/blob/master/LICENSE.txt
+  - Contributing: https://github.com/textX/textX/blob/master/CONTRIBUTING.md
+  - License: https://github.com/textX/textX/blob/master/LICENSE.txt
 - What's new:
   - Release 1.5: whatsnew/release_1_5.md
 
