Fixing PEP-8 issues.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ universal=1
 exclude = .git/*,.eggs/*,.tox/*,
           textx/six.py,
           textx/lang.py,
+          textx/rrel.py,
           tests/perf/*,
           build/*,venv/*,
           .ropeproject/*
