Add script that install test projects and run all tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,8 @@ before_install:
     - git clone --depth=1 --branch=master git://github.com/textX/Arpeggio.git
     - cd Arpeggio && python setup.py install
     - cd ../textX
-install:
-    - python setup.py install
 script:
+    - ./runtests.sh
     - coverage run --source textx -m py.test tests/functional
     - coverage report --fail-under 80
     - flake8
