Move meta-data to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,61 @@
 [metadata]
+name = textX
+author = Igor R. Dejanovic
+author_email = igor.dejanovic@gmail.com
+license = MIT
+description = Meta-language for DSL implementation inspired by Xtext
+keywords = parser, meta-language, meta-model, language, DSL
+url = https://github.com/textX/textX
+long_description = file: README
+long_description_content_type = text/markdown
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    Intended Audience :: Science/Research
+    Topic :: Software Development :: Interpreters
+    Topic :: Software Development :: Compilers
+    Topic :: Software Development :: Libraries :: Python Modules
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 description-file = README.md
+
+[options]
+packages = textx, textx.scoping
+zip_safe = False
+install_requires = Arpeggio>=1.9.0
+include_package_data = True
+package_dir =
+    textx = textx
+setup_requires =
+    setuptools_scm
+    wheel
+
+[options.extras_require]
+dev =
+    textx-dev
+    mkdocs
+    mike
+test =
+     textx-dev
+     flake8
+     tox
+     jinja2
+     coverage
+     coveralls
+     pytest
+
+[options.entry_points]
+textx_languages =
+    textx = textx.metamodel:textx
 
 [bdist_wheel]
 universal=1
