--- a/setup.cfg
+++ b/setup.cfg
@@ -26,26 +26,26 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-description-file = README.md
 
 [options]
-packages = textx, textx.scoping
+packages = textx, textx.scoping, textx.cli
 zip_safe = False
-install_requires = Arpeggio>=1.9.0
+install_requires =
+    Arpeggio>=1.9.0
+    click==7.0
 include_package_data = True
 package_dir =
     textx = textx
 setup_requires =
-    setuptools_scm
     wheel
 
 [options.extras_require]
 dev =
-    textx-dev
+    textX-dev
     mkdocs
     mike
+    twine
 test =
-     textx-dev
      flake8
      tox
      jinja2
@@ -54,6 +54,21 @@ test =
      pytest
 
 [options.entry_points]
+console_scripts = 
+    textx = textx.cli:textx
+
+textx_commands = 
+    version = textx.cli.version:version
+    list_languages = textx.cli.discover:list_languages
+    list_generators = textx.cli.discover:list_generators
+    generate = textx.cli.generate:generate
+    check = textx.cli.check:check
+
+textx_generators =
+    textx_dot = textx.generators:metamodel_generate_dot
+    any_dot = textx.generators:model_generate_dot
+    textx_plantuml = textx.generators:metamodel_generate_plantuml
+
 textx_languages =
     textx = textx.metamodel:textx
 
