--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ license = MIT
 description = Meta-language for DSL implementation inspired by Xtext
 keywords = parser, meta-language, meta-model, language, DSL
 url = https://github.com/textX/textX
-long_description = file: README
+long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
     Development Status :: 5 - Production/Stable
