Add initial `startproject` scaffolding docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
   - Error handling: error_handling.md
   - Debugging: debugging.md
   - textx command: textx_command.md
+  - Project scaffolding: scaffolding.md
   - Howtos: howto.md
 - Tutorials:
   - Hello World: tutorials/hello_world.md
