--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,8 @@ classifiers =
 packages = textx, textx.scoping, textx.cli
 zip_safe = False
 install_requires =
-    Arpeggio>=1.9.0
-    click==7.0
+    Arpeggio >= 1.9.0
+    click >=7.0, <8.0
 include_package_data = True
 package_dir =
     textx = textx
