Fix flake8 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,9 +76,10 @@ textx_languages =
 universal=1
 
 [flake8]
-exclude = .git/*,.eggs/*,.tox/*,
+ignore = E741,W503
+exclude = .git/*,.eggs/*,
           textx/six.py,
           textx/lang.py,
           tests/perf/*,
-          build/*,venv/*,
+          build/*,site/*,venv*,
           .ropeproject/*
