--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ universal=1
 
 [flake8]
 ignore = E741,W503
+max-line-length = 90
 exclude = .git/*,.eggs/*,
           textx/six.py,
           textx/lang.py,
