fix setup.cfg in flow_dsl project to include data
copy and paste error causes necessary data to be not included in builds

--- a/tests/functional/registration/projects/flow_dsl/setup.cfg
+++ b/tests/functional/registration/projects/flow_dsl/setup.cfg
@@ -8,8 +8,8 @@ install_requires =
     textX
 
 [options.package_data]
-data_dsl = *.tx
+flow_dsl = *.tx
 
 [options.entry_points]
 textx_languages =
-    flow_dsl = flow_dsl:flow_dsl 
+    flow_dsl = flow_dsl:flow_dsl
