--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,6 @@ packages = textx, textx.scoping, textx.cli
 zip_safe = False
 install_requires =
     Arpeggio >= 1.9.0
-    click >=7.0, <8.0
 include_package_data = True
 package_dir =
     textx = textx
@@ -40,12 +39,16 @@ setup_requires =
     wheel
 
 [options.extras_require]
+cli =
+    click >=7.0, <8.0
 dev =
     textX-dev
+    click >=7.0, <8.0
     mkdocs
     mike
     twine
 test =
+     click >=7.0, <8.0
      flake8
      tox
      jinja2
