Added decorator `textx.textxerror_wrap` for object processors to automatically transform non-TextXErrors to TextXErrors in order to indicate the filename and position of the element being processed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ packages = textx, textx.scoping, textx.cli
 zip_safe = False
 install_requires =
     Arpeggio >= 1.9.0
+    future
 include_package_data = True
 package_dir =
     textx = textx
