--- a/.github/workflows/ci-linux-ubuntu.yml
+++ b/.github/workflows/ci-linux-ubuntu.yml
@@ -1,6 +1,10 @@
 name: tests
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches-ignore:
+      - 'gh-pages'
+  pull_request:
 
 jobs:
   build:
