Add search to mkdocs plugins

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,5 +59,6 @@ markdown_extensions:
 
 plugins:
   - mike
+  - search
 
 copyright: Copyright &copy; <a href="http://www.igordejanovic.net/">Igor Dejanović</a>.
