added testcase to demonstrate the (minor) problem

--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,7 @@ venv
 .pytest_cache
 .idea
 examples/render_all_grammars/pu
+tests/functional/test_metamodel/model_param_generate_test.testtarget
+
 examples/render_all_grammars/REPORT.md
 
