Bugfix/do not allow empty rrel expressions (#355)
Do not allow "empty" RREL expressions (added testcase and fix)

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ venv
 .idea
 examples/render_all_grammars/pu
 examples/render_all_grammars/REPORT.md
+tests/functional/test_metamodel/model_param_generate_test.testtarget
 
