Unauthenticated git protocol no longer supported
https://github.blog/2021-09-01-improving-git-protocol-security-github/

--- a/.github/workflows/ci-linux-ubuntu.yml
+++ b/.github/workflows/ci-linux-ubuntu.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dev version of Arpeggio
       run: |
         cd ..
-        git clone --depth=1 --branch=master git://github.com/textX/Arpeggio.git
+        git clone --depth=1 --branch=master https://github.com/textX/Arpeggio
         pip uninstall -y Arpeggio
         cd Arpeggio && python setup.py install
         cd ../textX
