--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ classifiers = [
 
 requires-python = ">=3.8, <3.13"
 dependencies = [
-    "Arpeggio >= 2.0.0"
+    "Arpeggio >= 2.0.0",
+    "importlib-metadata; python_version < '3.10'",  # For entry_points backward compatibility
 ]
 
 [project.urls]
