--- a/.github/workflows/ci-linux-ubuntu.yml
+++ b/.github/workflows/ci-linux-ubuntu.yml
@@ -27,9 +27,8 @@ jobs:
       run: |
         cd ..
         git clone --depth=1 --branch=master https://github.com/textX/Arpeggio
-        pip uninstall -y Arpeggio
-        cd Arpeggio && python setup.py install
-        cd ../textX
+        pip install -e Arpeggio --upgrade
+        cd textX
     - name: Run unit tests
       run: |
         ./runtests.sh
